# fyre

./: Cargo.toml  README.md  install.sh
src/: main.rs
